<resources>
    <string name="app_name">MadLevel8PushAlerts</string>
    <string name="email_fragment_label">Email</string>
    <string name="code_fragment_label">Code</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tilEmail">Email</string>
    <string name="tilPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="login_successful">Login successful</string>"Please fill credentials"
    <string name="fill_credentials">Please fill credentials</string>
    <string name="tiTasksClosed">Closed</string>
    <string name="tiTasksOpen">Open</string>
    <string name="btnAssign">Assign Me</string>
    <string name="btnUnassign">Unassign</string>
    <string name="btnClose">close</string>
    <string name="logout">Logout</string>
    <string name="chipMine">Mine</string>
    <string name="chipUnassigned">Unassigned</string>
    <string name="chipOld">Older than 30 days</string>
</resources>